@@ -40,12 +40,12 @@ namespace scene
 				const core::vector3df& rotation = core::vector3df(0,0,0),
 				const core::vector3df& scale = core::vector3df(1.0f, 1.0f, 1.0f))
 			: RelativeTranslation(position), RelativeRotation(rotation), RelativeScale(scale),
-				Parent(parent), ID(id), SceneManager(mgr), TriangleSelector(0),
+				Parent(0), ID(id), SceneManager(mgr), TriangleSelector(0),
 				AutomaticCullingState(EAC_BOX), IsVisible(true),
 				DebugDataVisible(EDS_OFF), IsDebugObject(false)
 		{
-			if (Parent)
-				Parent->addChild(this);
+			if (parent)
+				parent->addChild(this);
 
 			updateAbsolutePosition();
 		}
